// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given a Button with Slottable with asChild should render a link with icon on the left/right 1`] = `
<div>
  <a
    href="https://radix-ui.com"
  >
    <span>
      left
    </span>
    Button 
    <em>
      text
    </em>
    <span>
      right
    </span>
  </a>
</div>
`;

exports[`given a Button with Slottable with asChild should throw error occurs when \`asChild\` set to true and multiple ReactNode are passed as children. 1`] = `"\`asChild\` cannot be set to true when passing multiple ReactNodes as children."`;

exports[`given a Button with Slottable without asChild should render a button with icon on the left/right 1`] = `
<div>
  <button>
    <span>
      left
    </span>
    Button 
    <em>
      text
    </em>
    <span>
      right
    </span>
  </button>
</div>
`;
